feat: adding HTTP server for the API
Signed-off-by: albertogviana <albertogviana@gmail.com>

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -23,6 +23,7 @@ linters:
         - gci
         - wrapcheck
         - errorlint
+        - cyclop
 
         # Drives todos nuts
         - godox
